# anykb

./: .gitattributes  .gitignore  README.md  docker-compose.yml  env.docker.example
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  env.example  pyproject.toml  railway.toml
backend/src/: app.py  settings.py
backend/src/admin/: __init__.py  routes.py
backend/src/agent/: context_builder.py  graph.py  nodes.py  prompts.py  state.py
backend/src/auth/: __init__.py  admin_seed.py  middleware.py  models.py  password.py  routes.py  tokens.py
backend/src/conversations/: __init__.py  keyword_extractor.py  long_term_memory.py  memory_maintenance.py  memory_routes.py  models.py  routes.py  short_term_memory.py
backend/src/infra/: crypto.py  database.py  embedding.py  llm.py  local_vector.py  memory_vector.py  rate_limit.py  redis_client.py  reranker.py  vector_store.py
backend/src/kb/: __init__.py  chunker.py  ingest.py  models.py  routes.py  system_seed.py
backend/src/kb/parsers/: __init__.py  docx.py  markdown.py  pdf.py  webpage.py
backend/src/safety/: input_filter.py  output_filter.py  tool_guard.py
backend/src/settings_user/: __init__.py  gate.py  kb_resolvers.py  models.py  probe.py  routes.py
backend/src/skills/: loader.py
backend/src/skills/general_report/: SKILL.md
backend/src/skills/travel_report/: SKILL.md
backend/src/tools/: amap_fallback.py  base.py  kb_search.py  restaurant_rag.py  weather.py  web_search.py
backend/tests/: conftest.py  test_admin.py  test_context_builder.py  test_graph.py  test_keyword_extractor.py  test_long_term_memory.py  test_memory_maintenance.py  test_memory_routes.py  test_milvus_smoke.py  test_redis_client.py  test_reranker_smoke.py  test_short_term_memory.py  test_smoke.py
frontend/: .dockerignore  Dockerfile  env.example  html2pdf.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Brand.tsx  BrandPanel.tsx  ChatBox.tsx  Dialog.tsx  (+11 more)
nginx/: anykb.conf
scripts/: backup.sh  deploy.sh  logs.sh
(+31 files in other folders)
