[project]
name = "anykb-backend"
version = "3.1.0"
description = "AnyKB backend — FastAPI + LangGraph private RAG knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "anthropic>=0.39",
  "openai>=1.30",
  "langgraph>=0.2",
  "qdrant-client>=1.11",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",
  # M1 — auth + app DB
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "bcrypt>=4.1",
  "pyjwt>=2.8",
  "email-validator>=2.1",
  # v2-M1 — Fernet symmetric encryption for at-rest API keys
  "cryptography>=43.0",
  # M2 — KB document parsers
  "pymupdf>=1.24",          # PDF
  "python-docx>=1.1",       # .docx
  "trafilatura>=1.12",      # HTML → clean text from URLs
  # v2-M5 — web search for unbound chat
  "ddgs>=4.0",              # DuckDuckGo search (no API key required)
  # v3-M2 — short-term memory hot storage (Redis async). Optional at runtime:
  # empty REDIS_URL keeps the feature dormant (pure-PG path), so the import is
  # only exercised when Redis is actually configured.
  "redis>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  # v3-M2 — in-memory Redis fake for short-term memory tests (no real server).
  "fakeredis>=2.20",
]
ollama = ["ollama>=0.3"]
openai = ["openai>=1.30"]
# v2-M7 — optional Logfire monitoring (enable by installing + setting LOGFIRE_TOKEN)
monitoring = ["logfire>=3.0"]
# v3-M2 — optional Milvus backend (Lite=embedded local .db, Standalone=server)
# `pip install -e .[milvus]` then set VECTOR_STORE=milvus in .env
milvus = ["pymilvus>=2.5", "milvus-lite>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
